Added support for -L option
Fix for issue #5

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "mode": "auto",
             "program": "cmd/main.go",
-            "args": "/home/saspeh/VSProjects"
+            "args": ["/home/saspeh/VSProjects"]
         }
     ]
 }
